# CommonLibF4

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CommonLibF4.sln  CommonLibF4.vcxproj  CommonLibF4.vcxproj.filters  LICENSE  README.md  vcpkg.json
.github/scripts/: check_clang_format.sh
.github/workflows/: main_ci.yml  maintenance.yml  meta_info.yml  static_checks.yml
AddressLibDecoder/: AddressLibDecoder.vcxproj  AddressLibDecoder.vcxproj.filters  CMakeLists.txt  README.md  bootstrap.ps1  vcpkg.json
AddressLibDecoder/src/: main.cpp
AddressLibGen/: .gitignore  AddressLibGen.vcxproj  AddressLibGen.vcxproj.filters  CMakeLists.txt  README.md  bootstrap.ps1  vcpkg.json
AddressLibGen/src/: main.cpp
CommonLibF4/: .clang-format  .clang-tidy  CMakeLists.txt  CommonLibF4.natvis  CommonLibF4.vcxproj  CommonLibF4.vcxproj.filters  IncludeGen.py  ProjectGen.py  README.md  bootstrap.ps1  glob_files.py  headerlist.cmake  vcpkg.json
CommonLibF4/cmake/: config.cmake.in  headerlist.cmake  sourcelist.cmake
CommonLibF4/include/F4SE/: API.cpp  API.h  F4SE.h  Interfaces.cpp  Interfaces.h  Logger.cpp  Logger.h  Trampoline.cpp  Trampoline.h  Version.h
CommonLibF4/include/F4SE/Impl/: Atomic.h  PCH.h  WinAPI.cpp  WinAPI.h
CommonLibF4/include/RE/: Fallout.cpp  Fallout.h  NiRTTI_IDs.h  RTTI.h  RTTI_IDs.h  VTABLE_IDs.h
CommonLibF4/include/RE/Bethesda/: AI.h  Actor.cpp  Actor.h  ActorValueInfo.h  Archive2.h  Atomic.cpp  Atomic.h  BGSBaseAliases.h  BGSBodyPartDefs.h  BGSCharacterMorph.h  BGSCharacterTint.h  BGSCreatedObjectManager.h  BGSDefaultObjectManager.h  BGSHeadPart.h  BGSInventoryInterface.h  BGSInventoryItem.h  BGSMod.h  BGSPrimitive.h  BGSSaveLoad.h  BGSStoryManagerTreeForm.h  BGSTextureSet.h  BSBTreeFile.h  BSBound.h  BSContainer.h  BSExtraData.cpp  BSExtraData.h  BSFixedString.cpp  BSFixedString.h  BSGraphics.h  BSInputDeviceManager.h  BSInputEventReceiver.h  BSInputEventSingleUser.h  BSInputEventUser.h  BSLock.cpp  BSLock.h  BSMTAManager.h  BSPointerHandle.cpp  BSPointerHandle.h  BSPreCulledObjects.h  BSResource.h  (+101 more)
CommonLibF4/include/RE/Havok/: hkArray.h  hkBaseObject.h  hkBaseTypes.h  hkBlockStream.h  hkHandle.h  hkLifoAllocator.h  hkMemoryAllocator.h  hkMemoryRouter.h  hkMemorySystem.h  hkRefPtr.h  hkReferencedObject.h  hkSimdFloat.h  hkVector4.h  hknpAllHitsCollector.h  hknpBodyId.h  hknpCharacterContext.h  hknpCharacterState.h  hknpCharacterSurfaceInfo.h  hknpClosestUniqueBodyIdHitCollector.h  hknpCollisionQueryCollector.h  hknpCollisionResult.h  hknpMaterialId.h  hknpShape.h  hknpUniqueBodyIdHitCollector.h
CommonLibF4/include/RE/NetImmerse/: NiAVObject.cpp  NiAVObject.h  NiAlphaProperty.h  NiBinaryStream.h  NiBound.h  NiCollisionObject.h  NiColor.h  NiExtraData.h  NiFile.h  NiFlags.h  NiMatrix3.h  NiNode.h  NiObject.h  NiObjectNET.cpp  NiObjectNET.h  NiPoint2.h  NiPoint3.h  NiPoint4.h  NiProperty.h  NiQuaternion.h  NiRTTI.h  NiRect.h  NiRefObject.h  NiShadeProperty.h  NiSmartPointer.h  NiStream.h  NiTArray.h  NiTCollection.h  NiTDefaultAllocator.h  NiTLargeArray.h  NiTList.h  NiTListBase.h  NiTMap.h  NiTMapBase.h  NiTPointerAllocator.h  NiTPointerListBase.h  NiTPointerMap.h  NiTexture.h  NiTimeController.h  NiTransform.h
CommonLibF4/include/RE/Scaleform/GFx/: GFx_ASMovieRootBase.h  GFx_Loader.h  GFx_Log.h  GFx_Player.cpp  GFx_Player.h  GFx_Resource.h  GFx_Types.h
CommonLibF4/include/RE/Scaleform/Kernel/: SF_AllocInfo.h  SF_Allocator.h  SF_Array.h  SF_Atomic.h  SF_List.h  SF_Log.h  SF_Memory.h  SF_MemoryHeap.h  SF_RefCount.h  SF_Stats.h  SF_SysAlloc.h  SF_System.h  SF_Threads.h
CommonLibF4/include/RE/Scaleform/Render/: Render_Color.h  Render_Constants.h  Render_Containers.h  Render_Context.h  Render_Matrix2x4.h  Render_Matrix3x4.h  Render_Matrix4x4.h  Render_ThreadCommandQueue.h  Render_TreeNode.h  Render_Types2D.h  Render_Viewport.h
CommonLibF4/include/RE/msvc/: functional.h  memory.h  typeinfo.h
CommonLibF4/include/REL/: Relocation.cpp  Relocation.h
CommonLibF4/ports/stl-interfaces/: CMakeLists.txt  portfile.cmake  vcpkg.json
CommonLibF4/scripts/: glob_files.py
CommonLibF4/src/F4SE/: API.cpp  Logger.cpp  Trampoline.cpp
CommonLibF4/src/F4SE/Impl/: PCH.cpp  WinAPI.cpp
CommonLibF4/src/RE/Bethesda/: BGSInventoryItem.cpp  MenuCursor.cpp
CommonLibF4/src/RE/NetImmerse/: NiAVObject.cpp  NiObjectNET.cpp  NiRect.cpp
CommonLibF4/src/RE/Scaleform/GFx/: GFx_Player.cpp
CommonLibF4/src/REL/: Relocation.cpp
ExampleProject/: .clang-format  CMakeLists.txt  ExampleProject.vcxproj  ExampleProject.vcxproj.filters  bootstrap.ps1  vcpkg.json
ExampleProject/cmake/: sourcelist.cmake
ExampleProject/scripts/: archive_artifacts.py
ExampleProject/src/: PCH.h  main.cpp
F4SEStub/: CMakeLists.txt  MakeGen.py  README.md  vcpkg.json
F4SEStub/cmake/: headerlist.cmake  sourcelist.cmake
F4SEStub/loader/: CMakeLists.txt  README.md
F4SEStub/loader/src/: main.cpp  pch.h
F4SEStub/runtime/: .clang-format  CMakeLists.txt  README.md  cmake_generate.py
F4SEStub/runtime/cmake/: headerlist.cmake  sourcelist.cmake
F4SEStub/runtime/src/: PCH.h  main.cpp
F4SEStub/runtime/src/Papyrus/: Actor.h  ActorBase.h  Armor.h  ArmorAddon.h  Cell.h  Common.h  Component.h  ConstructibleObject.h  DefaultObject.h  EncounterZone.h  EquipSlot.h  F4SE.h  Form.h  Game.h  HeadPart.h  Input.h  InstanceData.h  Location.h  MatSwap.h  Math.h  MiscObject.h  ObjectMod.h  ObjectReference.h  Papyrus.cpp  Perk.h  ScriptObject.h  UI.h  Utility.h  WaterType.h  Weapon.h
F4SEStub/src/: main.cpp
F4SEStub/steam_loader/: CMakeLists.txt  README.md
F4SEStub/steam_loader/src/: main.cpp  pch.h
RTTIDump/: CMakeLists.txt  README.md  RTTIDump.vcxproj  RTTIDump.vcxproj.filters  bootstrap.ps1  vcpkg.json
RTTIDump/src/: PCH.cpp  PCH.h  main.cpp
Tests/: .clang-format  CMakeLists.txt  README.md  vcpkg.json
Tests/src/: BSTHashMap.cpp  pch.h
cmake/: Findsrell.cmake  common.cmake
include/: ForceInclude.h  Util.h
include/F4SE/: Logger.h
include/RE/: BGSAttachParentArray.h  BGSDestructibleObjectForm.h  BGSForcedLocRefType.h  BGSKeywordForm.h  BGSModTemplateItems.h  (+36 more)
(+119 files in other folders)
